# AnaFlow

./: .env  .gitignore  README.md  buidl_web_server.md  conf.yaml  database_info.md  pyproject.toml  run.sh
src/ana_flow/: main.py  workflow.py
src/ana_flow/.serena/: project.yml
src/ana_flow/.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
src/ana_flow/agents/: agents.py
src/ana_flow/config/: agents.py  tools.py
src/ana_flow/graph/: builder.py  nodes.py  types.py
src/ana_flow/llms/: llm.py
src/ana_flow/prompts/: coder.md  conclusion.md  init_forcast.md  loader.md  loader_model.py  plan.json  planner.md  planner_model.py  reporter.md  researcher.md
src/ana_flow/rag/: builder.py  ragflow.py
src/ana_flow/server/: app.py  chat_request.py  config_request.py  rag_request.py
src/ana_flow/tools/: __init__.py  crawl.py  csv_loader.py  search.py
src/ana_flow/tools/tavily_search/: tavily_search_results_with_images.py
src/ana_flow/utils/: daily_logger.py  json_utils.py
src/nan_flow/: main.py  workflow.py
src/nan_flow/agents/: agents.py
src/nan_flow/config/: __init__.py  agents.py  configuration.py  report_style.py
src/nan_flow/graph/: builder.py  nodes.py  types.py
src/nan_flow/llms/: llm.py
src/nan_flow/prompts/: coder.md  coordinator.md  loader.md  planner.md  template.py
src/nan_flow/server/: app.py
src/nan_flow/tools/: crawl.py  search.py
tests/: test_my_db_connection.py
web/: Dockerfile  build-standalone.sh  package.json  pnpm-lock.yaml
web/src/app/: layout.tsx  page.tsx
web/src/app/chat/: main.tsx  page.tsx
web/src/app/chat/components/: conversation-starter.tsx  input-box.tsx  message-list-view.tsx  messages-block.tsx  research-activities-block.tsx  research-block.tsx  site-header.tsx  welcome.tsx
web/src/app/landing/components/: jumbotron.tsx
web/src/app/landing/store/: graph.ts  playbook.ts
web/src/app/settings/dialogs/: add-mcp-server-dialog.tsx  settings-dialog.tsx
web/src/app/settings/tabs/: general-tab.tsx  mcp-tab.tsx
web/src/components/deer-flow/: logo.tsx  markdown.tsx  message-input.tsx  theme-provider-wrapper.tsx
web/src/core/api/: chat.ts  config.ts  hooks.ts  resolve-service-url.ts  types.ts
web/src/core/config/: types.ts
web/src/core/messages/: types.ts
web/src/core/store/: settings-store.ts  store.ts
web/src/core/utils/: is-abort-error.ts
