[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ana-flow"
version = "0.1.0"
description = "ana-flow project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "inquirerpy>=0.3.4",
    "jinja2>=3.1.6",
    "json-repair>=0.46.0",
    "langchain-community>=0.3.24",
    "langchain-experimental>=0.3.4",
    "langchain-mcp-adapters>=0.1.1",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.8",
    "langgraph>=0.4.7",
    "markdownify>=1.1.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.0.0",
    "prophet>=1.1.7",
    "readabilipy>=0.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tabulate>=0.9.0",
    "xgboost>=3.0.2",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "langgraph-cli[inmem]>=0.2.10",
    "langchain-mcp-adapters>=0.0.9",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "langsmith>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ana_flow"]

[project.scripts]
ana-flow = "ana_flow:main"
